--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<p>first commit test</p>
+<app-navbar></app-navbar>
+
+<div class="container p-3">
+  <div class="row">
+    <div class="col">
+      <app-comment-form></app-comment-form>
+    </div>
+    <div class="col">
+      <app-comments></app-comments>
+    </div>
+  </div>
+</div>
