added the basic form submit logic

--- a/src/app/components/comment-form/comment-form/comment-form.component.html
+++ b/src/app/components/comment-form/comment-form/comment-form.component.html
@@ -22,6 +22,7 @@
             Comment cannot contain '<' or '>'.
           </div>
       </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!commentForm.valid">Submit</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!commentForm.valid">{{submitLabel}}</button>
+      <button type="button" class="btn btn-primary" *ngIf="hasCancelButton">Cancel</button>
     </form>
   </div>
