--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,14 +1,11 @@
-<div class="container mt-4">
-    <div *ngFor="let comment of comments" class="card mb-3">
-      <div class="card-body">
-        <p class="card-text" *ngIf="!comment.isEditing">{{ comment.text }}</p>
-        <textarea class="form-control" *ngIf="comment.isEditing" [(ngModel)]="comment.text"></textarea>
-      </div>
-      <div class="card-footer text-muted">
+<div class="comments-container container mt-4">
+    <div *ngFor="let comment of comments" class="mb-3">
+      <app-comment [comment]="comment"></app-comment>
+      <!-- <div class="card-footer text-muted">
         <button class="btn btn-link btn-sm">
           {{ comment.isEditing ? 'Cancel' : 'Edit' }}
         </button>
         <button class="btn btn-link btn-sm" *ngIf="!comment.isEditing">Reply</button>
-      </div>
+      </div> -->
     </div>
   </div>
