--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
 <div class="container p-3">
   <div class="row">
     <div class="col">
-      <app-comment-form></app-comment-form>
+      <app-comment-form (handleSubmit)="handleSubmit($event)" submitLabel="Submit"></app-comment-form>
     </div>
     <div class="col">
-      <app-comments></app-comments>
+      <app-comments [comments]="comments" currentUserId="1"></app-comments>
     </div>
   </div>
 </div>
