--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -10,15 +10,29 @@
         
         <p class="card-text">{{ comment.body }}</p>
         <div>COMMENT FORM EDITING</div>
+        <app-comment-form *ngIf="isEditing()" submitLabel="Update"
+        [hasCancelButton]="true"
+        [initialText]="comment.body"
+        (handleSubmit)="updateComment($event)"></app-comment-form>
         <div class="comment-actions">
             <button (click)="setActiveComment.emit({id: comment.id, type: activeCommentType.replying})" class="btn btn-outline-primary btn-sm comment-action" *ngIf="canReply">Reply</button>
             <button (click)="setActiveComment.emit({id: comment.id, type: activeCommentType.editing})" class="btn btn-outline-primary btn-sm comment-action" *ngIf="canEdit">Edit</button>
             <button class="btn btn-outline-primary btn-sm comment-action" *ngIf="canDelete">Delete</button>
         </div>
-        <div>COMMENT FORM REPLYING</div>
-        <app-comment-form *ngIf="isReplying()" submitLabe="Reply" (handleSubmit)="handleSubmit($event)"> </app-comment-form>
-        <div>REPLIES</div>
-        <!-- <textarea class="form-control" *ngIf="comment.isEditing" [(ngModel)]="comment.body"></textarea> -->
+        <!-- Reply Section -->
+        <app-comment-form [hasCancelButton]="true" *ngIf="isReplying()"  submitLabel="Reply" (handleSubmit)="handleSubmit($event)"> </app-comment-form>
+        <div class="replies" *ngIf="replies.length">
+            <app-comment *ngFor="let reply of replies" 
+            [comment]="reply"
+            (addComment)="addComment.emit($event);activeComment=null"  
+            [activeComment]="activeComment" 
+            (setActiveComment)="setActiveComment.emit($event)" 
+            [replies]="[]" 
+            [currentUserId]="currentUserId"
+            [parentId]="reply.id"
+            ></app-comment>
+        </div>
+        <!-- End Reply Section -->
         
     </div>
 
