--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand ms-5" href="#">Comments Component</a>
+      <a class="navbar-brand ms-5" href="#">Comments System</a>
       <div class="d-flex">
         <button (click)="clearAll()" class="btn btn-outline-light me-3" type="button">Clear All Comments</button>
         <button (click)="setToDefault()" class="btn btn-outline-light me-3" type="button">Reset To Default</button>
